# structure_grabber

./: CMakeLists.txt  README.md  oni2_grabber.cpp
